--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,91 @@
+:root {
+    --bg-primary: #333;
+    --clr-primary: #eee;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+    /* overscroll-behavior: none; */
+}
+
 body {
-    background-color: #333333;
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* overscroll-behavior: none; */
+    background-color: var(--bg-primary);
+    color: var(--clr-primary);
+    font-size: 1.6rem;
+    font-family: "OpenSans", Arial, Helvetica, sans-serif;
+    height: 100svh;
+    margin: 0;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.justify-content-space-between {
+justify-content: space-between;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.text-align-center {
     text-align: center;
 }
 
-html,
-body {
-    overscroll-behavior: none;
-}
-
-div {
-    align-self: center;
-    margin: 20px 0;
-    display: inline;
+main {
+    padding: 0.8rem;
+    flex: 1;
 }
 
 #canvas {
-    width: 95%;
-    max-width: 70vh;
-    margin-bottom: 20px;
+    border: 0.1rem solid var(--clr-primary);
+
+    width: 50rem;
+    height: 50rem;
+    max-height: 70dvh;
+    max-width: 70dvb;
 }
 
 button {
-    background-color: white;
-    color: black;
-    width: 200px;
-    height: 50px;
-    border-radius: 20px;
+    background-color: var(--clr-primary);
+    color: var(--bg-primary);
+    border: 0.1rem solid var(--bg-primary);
+    padding: 0.8rem 3.2rem;
+    border-radius: 0.8rem;
     font-size: larger;
-    font-weight: 900;
+    font-weight: bold;
 }
 
-#scores {
-    width: 400px;
-    display: inline-block;
-}
-
-footer {
-    font-size: x-small;
+button:hover {
+    background-color: var(--bg-primary);
+    color: var(--clr-primary);
+    border-color: var(--clr-primary);
 }
 
 a {
-    font-size: inherit;
     text-decoration: none;
+    color: var(--clr-primary);
 }
 
-a:visited {
-    color: white;
+a:hover {
+    font-size: medium;
+    font-weight: bold;
 }
 
-
-/* @media screen {} */
+footer {
+    font-size: 1.4rem;
+    height: 5rem;
+}
