--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,9 @@ body {
     color: var(--clr-primary);
     font-size: 1.6rem;
     font-family: "OpenSans", Arial, Helvetica, sans-serif;
-    height: 100vh;
-    width: 100%;
+    height: 100dvh;
+    /* width: 100%; */
     margin: 0;
-    outline: 2px solid red;
 }
 
 .flex-column {
