--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,11 @@ main {
 
 #canvas {
     border: 0.1rem solid var(--clr-primary);
-    width: 30rem;
-    height: 30rem;
-    max-height: 70vw;
-    max-width: 70dvw;
+    aspect-ratio: 1;
+    margin: 0.8rem;
+    height: 50rem;
+    max-height: 80dvw;
+    max-width: 80dvh;
 }
 
 button {
