--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     font-size: 1.6rem;
     font-family: "OpenSans", Arial, Helvetica, sans-serif;
     height: 100dvh;
-    /* width: 100%; */
+    width: 100dvw;
     margin: 0;
 }
 
